--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "angular-sanitize": "^1.6.1",
     "angular-ui-bootstrap": "^2.5.0",
     "angular-ui-grid": "^4.0.2",
-    "angular-ui-router": "beta",
+    "angular-ui-router": "1.0.0-rc.1",
     "bootstrap-sass": "^3.3.7",
     "lodash": "^4.17.4",
     "pouchdb-browser": "^6.1.1",
@@ -36,7 +36,7 @@
     "eslint": "^3.14.1",
     "eslint-config-angular": "^0.5.0",
     "eslint-plugin-angular": "^1.6.1",
-    "extract-text-webpack-plugin": "beta",
+    "extract-text-webpack-plugin": "2.0.0-rc.2",
     "file-loader": "^0.10.0",
     "html-loader": "^0.4.4",
     "html-webpack-plugin": "^2.28.0",
